--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# This file lists all individuals having contributed content to the respository.
+# This file lists all individual having contributed content to the respository.
 
 oussama El aouzari <elaouzariofficiel12@gmail.com>
 Abdennebi Bamansour <>
